[package]
name = "zchunk"
version = "0.2.0"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "MIT"
homepage = "https://github.com/yybit/zchunk-rs"
repository = "https://github.com/yybit/zchunk-rs"
description = "A pure rust library for parsing and generating zchunk file"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zchunk"

[dependencies]
thiserror = "1.0.51"
zstd = "0.13.0"
sha2 = "0.10.8"

[dev-dependencies]
hex = "0.4.3"
tempfile = "3.8.1"
